# MujifyTweak

./: .gitignore  LICENSE  OWNER_DASHBOARD.md  README.md  RELEASE_NOTES.md  VM_TESTING.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
analytics-worker/: README.md  worker.js  wrangler.toml
resources/: README.md
scripts/: free-port.cjs  release.mjs
sidecar-src/LHMWrapper/: .gitignore  Program.cs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: fixes.json  game_profiles.json  game_servers.json  game_settings_db.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: ai_backend.rs  anti_cheat_guard.rs  auto_apply.rs  benchmark.rs  change_journal.rs  change_log.rs  cleaner.rs  config.rs  debloat.rs  driver_doctor.rs  fix_catalog.rs  frame_time_monitor.rs  game_detector.rs  game_icons.rs  game_profiler.rs  game_profiles.rs  game_settings.rs  games_db.rs  hardware_profiler.rs  hardware_tier.rs  health_scan.rs  logger.rs  mod.rs  network_monitor.rs  overlay.rs  power_util.rs  process_manager.rs  profile_store.rs  ram_optimizer.rs  ready_check.rs  restore_points.rs  rollback_engine.rs  server_ping.rs  services_manager.rs  sessions.rs  speed_test.rs  support.rs  system_monitor.rs  system_mutator.rs  tweak_catalog.rs  (+3 more)
src/components/: ActionCards.tsx  ActionDiffCard.tsx  ApplyConfirmModal.tsx  BoostButton.tsx  BoosterCard.tsx  DebloatSection.tsx  DetectiveCard.tsx  DiscordIcon.tsx  DriverHealth.tsx  GameArt.tsx  GameHistory.tsx  GameOptimizeModal.tsx  GamesBar.tsx  HealthScan.tsx  MandatoryUpdateModal.tsx  Markdown.tsx  OverlayControl.tsx  PagePlaceholder.tsx  PerformanceChart.tsx  PingOptimizer.tsx  ReadyCheck.tsx  RecentActivity.tsx  RestorePointCard.tsx  RiskBadge.tsx  RiskLabel.tsx  (+18 more)
(+45 files in other folders)
