[package]
name = "mujify-tweaks"
version = "0.9.0-beta.17"
description = "Mujify Tweaks — free Windows gaming optimizer with per-game profiles, proof reports and full rollback"
authors = ["Mujify"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mujify_tweaks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4"] }
winreg = "0.56.0"
sysinfo = "0.39.5"
wmi = "0.18.4"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
walkdir = "2.5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
windows = { version = "0.62.2", features = ["Win32_System_Power", "Win32_System_Services", "Win32_System_Threading", "Win32_NetworkManagement_QoS", "Win32_System_Registry", "Win32_System_ProcessStatus", "Win32_NetworkManagement_IpHelper", "Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse", "Win32_Media", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

